dist_man1_MANS=

if BUILD_MATILDAD
  dist_man1_MANS+=matildad.1
endif

if ENABLE_QT
  dist_man1_MANS+=matilda-qt.1
endif

if BUILD_MATILDA_CLI
  dist_man1_MANS+=matilda-cli.1
endif

if BUILD_MATILDA_TX
  dist_man1_MANS+=matilda-tx.1
endif

if ENABLE_WALLET
if BUILD_MATILDA_WALLET
  dist_man1_MANS+=matilda-wallet.1
endif
endif
